--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -1,4 +1,4 @@
-<!-- begin hero -->
+{{/* begin hero */}}
 {{ if .Site.Params.hero.hero__image }}
 <section class="hero">
   <div class="hero__inner">
@@ -21,4 +21,4 @@
   </div>
 </section>
 {{ end }}
-<!-- begin hero -->
+{{/* begin hero */}}
