--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -1,6 +1,6 @@
 {{ $paginator := .Paginator }}
 {{ if gt $paginator.TotalPages 1 }}
-<!-- begin pagination -->
+{{/* begin pagination */}}
 <div class="container">
   <div class="row">
     <div class="col col-12">
@@ -10,7 +10,7 @@
     </div>
   </div>
 </div>
-<!-- end pagination -->
+{{/* end pagination */}}
 {{ end }}
 
 <script>
