--- a/layouts/partials/search.html
+++ b/layouts/partials/search.html
@@ -1,4 +1,4 @@
-<!-- begin search -->
+{{/* begin search */}}
 <div class="search">
   <div class="container">
     <div class="row">
@@ -17,4 +17,4 @@
     </div>
   </div>
 </div>
-<!-- end search -->
+{{/* end search */}}
