base update for colors

--- a/assets/sass/0-settings/_variables.scss
+++ b/assets/sass/0-settings/_variables.scss
@@ -12,18 +12,18 @@ $global-transition: all .2s;
 // *****************
 // Color Variables
 // *****************
-$brand-color: #ff7b7b;
-$dark: #09080f;
+$brand-color: #282433;
+$dark: #282433;
 $blue-dark: #17151E;
 $gray: #aaa;
 $light-gray: #eee;
-$white: #fff;
+$white: #eee9fc;
 
 // Body Color
 $text-color: $light-gray;
 
 // Background Colors
-$background-color: #0f0e15;
+$background-color: #282433;
 
 
 // *****************
