--- a/layouts/partials/featured-posts.html
+++ b/layouts/partials/featured-posts.html
@@ -10,7 +10,7 @@
               <div class="article__inner">
 
                 {{ if ( in .Params.featured "true") }}
-                  <span class="featured-post ion ion-ios-star-outline"></span>
+                  <!-- featured post -->
                 {{ end }}
 
                 <a class="article__image" href="{{ .RelPermalink }}">
