--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,7 +15,7 @@
   </main>
   <!-- end content -->
 
-  <div class="top" title="Top"><i class="ion ion-ios-arrow-up"></i></div>
+  <div class="top" title="Top"><i class="fa-sharp fa-solid fa-arrow-up"></i></div>
 
   {{ partial "footer.html" . }}
 
