--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -24,15 +24,13 @@
 
   {{/* Fonts */}}
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://kit.fontawesome.com/">
 
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap" as="style">
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet">
 
-  {{/* Ionicons */}}
-  <link rel="preload" href="https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css" as="style">
-
-  <link href="https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/{{ .Site.Params.fontawesome.identifier }}.js" crossorigin="anonymous"></script>
 
   {{/* CSS */}}
   {{ with resources.Get "sass/main.scss" | toCSS | minify }}
