--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,7 +18,7 @@
           <nav class="main-nav">
             <div class="main-nav__box">
               <div class="nav__icon-close">
-                <i class="ion ion-md-close"></i>
+                <i class="fa-sharp fa-light fa-xmark"></i>
               </div>
               <div class="nav-grid">
                 <div class="nav-grid__item">
@@ -51,9 +51,9 @@
         </div>
 
         <div class="nav-buttons">
-          <i class="nav__icon nav__icon-menu ion ion-md-menu"></i>
+          <i class="nav__icon nav__icon-menu fa-sharp fa-solid fa-bars"></i>
           <div class="search-button">
-            <i class="nav__icon nav__icon-search ion ion-md-search"></i>
+            <i class="nav__icon nav__icon-search fa-sharp fa-solid fa-magnifying-glass"></i>
             <span>Search</span>
           </div>
         </div>
