--- a/layouts/partials/featured-posts.html
+++ b/layouts/partials/featured-posts.html
@@ -1,4 +1,4 @@
-<!-- begin featured post -->
+{{/* begin featured post */}}
 <section class="featured-post">
   <div class="container">
     <div class="row">
@@ -23,7 +23,7 @@
                       <span class="article__minutes">{{ .ReadingTime }} min read</span>
                       <time class="article__date" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">{{ .Date.Format "Jan 2, 2006" }}</time>
                     </div>
-                    
+
                     <h2 class="article__title">{{ .Title }}</h2>
 
                     <p class="article__excerpt">{{ if .Description }}{{ .Description }}{{ else }}{{ truncate 142 .Summary | safeHTML }}{{ end }}</p>
@@ -31,13 +31,13 @@
                     <div class="article__bottom">
 
                       <div class="article__author">
-                        <a href="/about/" aria-label="{{.Site.Params.author.name}}">
-                          <img class="article__author-image lazy" data-src="{{ .Site.Params.author.avatar | absURL }}" alt="{{.Site.Params.author.name}}'s Picture">
+                        <a href="/about/" aria-label="{{ .Site.Params.author.name }}">
+                          <img class="article__author-image lazy" data-src="{{ .Site.Params.author.avatar | absURL }}" alt="{{ .Site.Params.author.name}}'s Picture">
                         </a>
                       </div>
-            
+
                       <div class="article__bottom-meta">
-                        <a class="article__author-link" href="/about/">{{.Site.Params.author.name}}</a>
+                        <a class="article__author-link" href="/about/">{{ .Site.Params.author.name }}</a>
                         <span>in</span>
                         {{ if .Params.tags }}
                         <span class="article-tags">
@@ -58,4 +58,4 @@
     </div>
   </div>
 </section>
-<!-- end featured post -->
+{{/* end featured post */}}
