removes Contact page and "fancy" pagination

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,7 +9,7 @@
 
   {{ partial "header.html" . }}
 
-  <!-- begin content -->
+  {{/* begin content */}}
   <main class="content" aria-label="Content">
     {{ block "main" . }}{{ end }}
   </main>
