simplifies Theme config

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,6 +5,7 @@
 
 <body class="is-in">
 
+  {{/* see https://gohugo.io/templates/internal/#google-analytics */}}
   {{ template "_internal/google_analytics.html" . }}
 
   {{ partial "header.html" . }}
