--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,8 +4,8 @@
   <div class="row">
     <div class="col col-8 col-d-10 col-m-12 push-m-0 push-d-1 push-2">
       <div class="archive-box">
-        <span class="archive-meta">{{ len .Pages }} {{ if lt (len .Pages) 2 }}post{{ else }}posts{{ end }} tagged</span>
         <h1 class="archive-title">{{ .Title }}</h1>
+        <span class="archive-meta">{{ len .Pages }} {{ if lt (len .Pages) 2 }}article{{ else }}articles{{ end }}</span>
       </div>
     </div>
   </div>
