--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -16,7 +16,11 @@
     <div class="row">
       <div class="col col-12">
         <div class="footer__inner">
-          <div class="copyright">Made with <i class="fa-sharp fa-solid fa-heart"></i> by x<a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>s.</div>
+
+          <div class="copyright">
+            Crafted with <i class="fa-solid fa-heart"></i>️ by <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}.</a>
+          </div>
+
           {{ partial "social-links.html" . }}
         </div>
       </div>
