--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -1,13 +1,13 @@
 {{/* begin hero */}}
-{{ if .Site.Params.hero.hero__image }}
+{{ if .Site.Params.hero_image }}
 <section class="hero">
   <div class="hero__inner">
     <div class="hero__image">
-      <img src="{{ .Site.Params.hero.hero__image }}" alt="{{ .Site.Params.hero.hero__title }}">
+      <img src="{{ .Site.Params.hero_image }}" alt="{{ .Site.Title }}">
     </div>
     <div class="hero__content">
-      <h1 class="hero__title">{{ .Site.Params.hero.hero__title }}</h1>
-      <p class="hero__desc">{{ .Site.Params.hero.hero__description }}</p>
+      <h1 class="hero__title">{{ .Site.Title }}</h1>
+      <p class="hero__desc">{{ .Site.Params.Description }}</p>
     </div>
   </div>
 </section>
@@ -15,8 +15,8 @@
 <section class="hero-without-image">
   <div class="hero-inner">
     <div class="hero-content">
-      <h1 class="hero__title">{{ .Site.Params.hero.hero__title }}</h1>
-      <p class="hero__desc">{{ .Site.Params.hero.hero__description }}</p>
+      <h1 class="hero__title">{{ .Site.Title }}</h1>
+      <p class="hero__desc">{{ .Site.Params.Description }}</p>
     </div>
   </div>
 </section>
