--- a/layouts/404.html
+++ b/layouts/404.html
@@ -6,7 +6,7 @@
       <div class="error-page">
         <h2 style="font-size: 48px">404</h2>
         <p>The requested page could not be found.</p>
-        <p><a href="/" class="button button--middle" style="text-decoration: none; border: none">Back to the blog</a></p>
+        <p><a href="/" class="button button--middle" style="text-decoration: none; border: none">Back to {{ .Site.Title }}</a></p>
       </div>
       <hr>
     </div>
