--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -50,7 +50,7 @@
   </div>
 </div>
 
-<!-- begin post -->
+{{/* begin post */}}
 <div class="container">
   <article class="post amimate">
 
@@ -85,13 +85,13 @@
 
   </article>
 </div>
-<!-- end post -->
+{{/* end post */}}
 
 {{ partial "related-posts.html" . }}
 
 {{ else }}
 
-<!-- begin hero -->
+{{/* begin hero */}}
 {{ if .Params.image }}
 <section class="hero">
   <div class="hero__inner">
@@ -112,9 +112,9 @@
   </div>
 </section>
 {{ end }}
-<!-- begin hero -->
+{{/* begin hero */}}
 
-<!-- begin page -->
+{{/* begin page */}}
 <div class="container">
   <article class="page animate">
     <div class="page__content">
@@ -122,7 +122,7 @@
     </div>
   </article>
 </div>
-<!-- end page -->
+{{/* end page */}}
 
 {{ end }}
 
