--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="{{ .Site.Params.theme_color }}">
 
-  <title>{{ if not .IsHome }}{{ humanize .Title }} | {{ end }}{{ .Site.Title }}</title>
+  <title>{{ if not .IsHome }}{{ humanize .Title }} &mdash; {{ end }}{{ .Site.Title }}</title>
   <meta name="description" content="{{if .IsHome }}{{ .Site.Params.description }}{{else}}{{ .Description }}{{ end }}">
 
   {{/* Twitter Card */}}
@@ -16,10 +16,10 @@
   <meta name="twitter:domain" content="{{ .Site.BaseURL }}">
   <meta name="twitter:image" content="{{ if .IsHome }}{{ .Site.Params.hero_image | absURL }}{{ else }}{{ .Params.Image | absURL }}{{ end }}">
   <meta name="twitter:site" content="{{ .Site.BaseURL }}">
-  <meta name="twitter:title" content="{{ if not .IsHome }}{{ .Title }} | {{ end }}{{ .Site.Title }}">
+  <meta name="twitter:title" content="{{ if not .IsHome }}{{ .Title }} — {{ end }}{{ .Site.Title }}">
 
   {{/* OpenGraph */}}
-  <meta property="og:title" content="{{ if not .IsHome }}{{ .Title }} | {{ end }}{{ .Site.Title }}">
+  <meta property="og:title" content="{{ if not .IsHome }}{{ .Title }} — {{ end }}{{ .Site.Title }}">
   <meta property="og:type" content="website">
   <meta property="og:description" content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage }} {{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}">
   <meta property="og:image" content="{{ if .IsHome }}{{ .Site.Params.hero_image | absURL }}{{ else }}{{ .Params.Image | absURL }}{{ end }}">
@@ -30,7 +30,10 @@
 
   {{/* Styling (Fonts, Icons, etc.) */}}
   <link rel="preconnect" href="https://kit.fontawesome.com/">
-  <link rel="icon" type="image/x-icon" href="{{ "favicon.ico" | relURL }}">
+  <link rel="icon" type="image/x-icon" href="{{ "favicon.ico" | relURL }}">{{/* 32×32 */}}
+  <link rel="icon" href="{{ "icon.svg" | relURL }}" type="image/svg+xml" />
+  <link rel="apple-touch-icon" href="{{ "apple-touch-icon.png.ico" | relURL }}" />{{/* 180×180 */}}
+  <link rel="manifest" href="{{ "manifest.webmanifest" | relURL }}" />
 
   <script src="https://kit.fontawesome.com/{{ .Site.Params.fontawesome.identifier }}.js" crossorigin="anonymous"></script>
 
