--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,7 +12,9 @@
   </main>
   {{/* end content */}}
 
-  <div class="top" title="Top"><i class="fa-sharp fa-solid fa-arrow-up"></i></div>
+  <div class="top" title="Top">
+    <i class="fa-sharp fa-solid fa-arrow-up"></i>
+  </div>
 
   {{ partial "footer.html" . }}
 
