--- a/assets/sass/3-modules/_social-links.scss
+++ b/assets/sass/3-modules/_social-links.scss
@@ -12,7 +12,7 @@
       justify-content: flex-start;
     }
   }
-  
+
   .social__item {
     display: inline-block;
     margin-right: 8px;
@@ -33,7 +33,7 @@
     color: $white;
     background-color: $blue-dark;
     &:hover {
-      color: $dark;
+      color: $white;
       background-color: $brand-color;
     }
   }
